[gd_scene load_steps=20 format=2]

[ext_resource path="res://Overlap/Hurtbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://Enemies/Dragon.gd" type="Script" id=2]
[ext_resource path="res://Art/Characters/Monsters/Dragons/RedDragon.png" type="Texture" id=3]
[ext_resource path="res://LaserBeam/EnemyLaserBeam2D.tscn" type="PackedScene" id=4]

[sub_resource type="Shader" id=17]
code = "shader_type canvas_item;

uniform bool active = false;

void fragment() {
	vec4 previous_color = texture(TEXTURE, UV);
	vec4 white_color = vec4(1.0, 1.0, 1.0, previous_color.a);
	vec4 new_color = previous_color;
	if (active == true) {
		new_color = white_color;
	}
	COLOR = new_color;
}"

[sub_resource type="ShaderMaterial" id=18]
resource_local_to_scene = true
shader = SubResource( 17 )
shader_param/active = false

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 0, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 32, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 11 ), SubResource( 12 ) ],
"loop": false,
"name": "Attack",
"speed": 2.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
} ]

[sub_resource type="Animation" id=19]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=20]
resource_name = "StartInvinc"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=21]
resource_name = "StopInvinc"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="CircleShape2D" id=8]
radius = 186.936

[sub_resource type="CircleShape2D" id=22]
radius = 28.02

[sub_resource type="CircleShape2D" id=10]
radius = 27.65

[node name="Dragon" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 2 )
ACCELERATION = 500
health = 5

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 18 )
rotation = 4.71239
scale = Vector2( 2, 2 )
frames = SubResource( 7 )
animation = "Attack"
frame = 1
playing = true

[node name="Invincibility" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 19 )
anims/StartInvinc = SubResource( 20 )
anims/StopInvinc = SubResource( 21 )

[node name="PlayerDetectionZone" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectionZone"]
visible = false
shape = SubResource( 8 )

[node name="Hurtbox" parent="." instance=ExtResource( 1 )]
position = Vector2( 2, 0 )
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource( 22 )

[node name="StopTimer" type="Timer" parent="."]
one_shot = true

[node name="Line2D" type="Line2D" parent="."]
visible = false
default_color = Color( 1, 1, 1, 1 )

[node name="LaserBeam2D" parent="." instance=ExtResource( 4 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 10 )

[node name="ReloadTimer" type="Timer" parent="."]
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="WaitTimer" type="Timer" parent="."]
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
volume_db = -5.0

[connection signal="body_entered" from="PlayerDetectionZone" to="." method="_on_PlayerDetectionZone_body_entered"]
[connection signal="body_exited" from="PlayerDetectionZone" to="." method="_on_PlayerDetectionZone_body_exited"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="invincibility_ended" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_ended"]
[connection signal="invincibility_started" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_started"]
[connection signal="timeout" from="StopTimer" to="." method="_on_StopTimer_timeout"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_ReloadTimer_timeout"]
[connection signal="timeout" from="WaitTimer" to="." method="_on_WaitTimer_timeout"]

[editable path="Hurtbox"]
